--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
 </head>
 <body>
     
-    <script src="index.js"></script>
+<p id="firstname"></p>
+<p id="lastname"></p>
+<p id="school"></p>
+<p id="paragraph"></p>
+
+
+<var id="Title"></var><br>
+<var id="Author"></var><br>
+<var id="Published"></var><br>
+<var id="Available"></var><br>
+
+
+<div class="form-container-1">
+    <form class="form" action="">
+        <div class="first-input-1">
+            <input type="name" name="" id="" placeholder="firstname:"></div>
+            <div class="second-input-2">
+                <input type="name" name="" id="" placeholder="lastname:"></div>
+            <div class="third-input-3">
+                <input type="age" name="" id="" placeholder="age:"></div>
+            <div class="fourth-input-4">
+              <input type="nationality" name="" id="" placeholder="nationality:"></div>
+            <div class="fifth-input-5">
+             <input type="profession" name="" id="" placeholder="profession:"></div>
+
+</div>
+
+<script src="index.js"></script>
 </body>
 </html>
